--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -29,6 +29,8 @@ Results
 
 \subsection{Why studying diffusion for xenon krypton}
 
+si on s'intéresse à la régénération par exemple (petit problème). barrière cinétique d'entrée et de sortie.
+courbe de percée de la publi banerjee> une partie est expliquée par la diffusion également.
 \todo{kinetic KAXQIL problem}
 
 \subsection{Correlations}
