--- a/thesis.bib
+++ b/thesis.bib
@@ -3250,3 +3250,9 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {Mastering the game of Go without human knowledge},
 	journal = {Nature}
 }
+@book{azencott2022introduction,
+  title={Introduction au Machine Learning-2e {\'e}d.},
+  author={Azencott, Chlo{\'e}-Agathe},
+  year={2022},
+  publisher={Dunod}
+}
